Added test.py for CI/CD
Signed-off-by: Pradyumna <51270439+PradyumnaKrishna@users.noreply.github.com>

--- a/templates/fer.html
+++ b/templates/fer.html
@@ -21,7 +21,7 @@
 </div>
 
 <header class="navbar">
-    <form action="/FER" method="post" enctype="multipart/form-data">
+    <form action="/FER/" method="post" enctype="multipart/form-data">
         <div align="center">
             <label class="btn btn-default btn-file">
                 Browse <input type="file" name="image" style="display: none;" autocomplete="off" required>
