mobile friendly view

--- a/templates/fer.html
+++ b/templates/fer.html
@@ -41,11 +41,11 @@
                 {% if category == 'success' %}
                     <div class="container" style="width: 100%;">
                         <div class="row">
-                            <div class="col-xs-6">
+                            <div class="row-xs-6 col-md-6">
                                 <h2>Prediction</h2>
                                 <img src=" {{ image_to_show }}" alt="Predicted" style="max-width: 100%;">
                             </div>
-                            <div class="col-xs-6">
+                            <div class="row-xs-6 col-md-6">
                                 <h2>Graphical Representation</h2>
                                 <img src="{{ graph_to_show }}" alt="Probability" style="max-width: 100%;">
                             </div>
